--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div> -->
             <script>
                 function openGmailSmart() {
-                    const email = "akash@example.com";
+                    const email = "nextgenaiautomationagency@gmail.com";
                     const subject = "Hello from Portfolio";
                     const body = "Hi Akash, I saw your portfolio and...";
 
